fixed overflow of story section in tablet portrait

--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -11,7 +11,7 @@
     transform: skewX(-12deg);
 
     @include respond(tab-port) {
-        width: 100%;
+        width: 90%;
         padding: 4rem;
         padding-left: 7rem;
     }
